--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Zrušit</string>
-    <string name="search">Hledat</string>
     <string name="save_as">Uložit jako</string>
     <string name="file_saved">Soubor úspěšně uložen</string>
     <string name="invalid_file_format">Neplatný formát souboru</string>
@@ -12,6 +11,10 @@
     <string name="set_as">Nastavit jako</string>
     <string name="value_copied_to_clipboard">Value copied to clipboard</string>
     <string name="unknown">Unknown</string>
+
+    <!-- Search -->
+    <string name="search">Hledat</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">Filtrovat</string>
