--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -1,7 +1,6 @@
 ﻿<resources>
     <string name="ok">OK</string>
     <string name="cancel">Abbrechen</string>
-    <string name="search">Suchen</string>
     <string name="save_as">Speichern unter</string>
     <string name="file_saved">Datei erfolgreich gespeichert</string>
     <string name="invalid_file_format">Ungültiges Dateiformat</string>
@@ -12,6 +11,10 @@
     <string name="set_as">Festlegen als</string>
     <string name="value_copied_to_clipboard">Wert in Zwischenablage kopiert</string>
     <string name="unknown">Unbekannt</string>
+
+    <!-- Search -->
+    <string name="search">Suchen</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">Sortieren</string>
