--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="ok">U redu</string>
     <string name="cancel">Poništi</string>
-    <string name="search">Traži</string>
     <string name="save_as">Spremi kao</string>
     <string name="file_saved">Datoteka uspješno spremljena</string>
     <string name="invalid_file_format">Nevažeći format datoteke</string>
@@ -12,6 +11,10 @@
     <string name="set_as">Postavi kao</string>
     <string name="value_copied_to_clipboard">Vrijednost spremljena u međuspremnik</string>
     <string name="unknown">Unknown</string>
+
+    <!-- Search -->
+    <string name="search">Traži</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">Filter</string>
