--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Annulla</string>
-    <string name="search">Cerca</string>
     <string name="save_as">Salva come</string>
     <string name="file_saved">File salvato correttamente</string>
     <string name="invalid_file_format">Formato file non valido</string>
@@ -12,6 +11,10 @@
     <string name="set_as">Imposta come</string>
     <string name="value_copied_to_clipboard">Valore copiato negli appunti</string>
     <string name="unknown">Sconosciuto</string>
+
+    <!-- Search -->
+    <string name="search">Cerca</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">Filtro</string>
