--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="ok">확인</string>
     <string name="cancel">취소</string>
-    <string name="search">검색</string>
     <string name="save_as">다른이름으로 저장</string>
     <string name="file_saved">파일저장 성공</string>
     <string name="invalid_file_format">잘못된 파일 형식</string>
@@ -12,6 +11,10 @@
     <string name="set_as">애플리케이션에 설정</string>
     <string name="value_copied_to_clipboard">클립보드에 복사됨</string>
     <string name="unknown">알 수 없음</string>
+
+    <!-- Search -->
+    <string name="search">검색</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">필터</string>
