--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="ok">Gerai</string>
     <string name="cancel">Atðaukti</string>
-    <string name="search">Ieðkoti</string>
     <string name="save_as">Iðsaugoti kaip</string>
     <string name="file_saved">Failas iðsaugotas sëkmingai</string>
     <string name="invalid_file_format">Neteisingas failo formatas</string>
@@ -12,6 +11,10 @@
     <string name="set_as">Set as</string>
     <string name="value_copied_to_clipboard">Value copied to clipboard</string>
     <string name="unknown">Unknown</string>
+
+    <!-- Search -->
+    <string name="search">Ieðkoti</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">Filter</string>
