--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Avbryt</string>
-    <string name="search">Søk</string>
     <string name="save_as">Lagre som</string>
     <string name="file_saved">Fil vellykket lagret</string>
     <string name="invalid_file_format">Ugyldig filformat</string>
@@ -12,6 +11,10 @@
     <string name="set_as">Sett som</string>
     <string name="value_copied_to_clipboard">Verdi kopiert til utklippstavle</string>
     <string name="unknown">Ukjent</string>
+
+    <!-- Search -->
+    <string name="search">Søk</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">Filter</string>
