--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Anuluj</string>
-    <string name="search">Szukaj</string>
-    <string name="save_as">Zapisz jako&#8230;</string>
+    <string name="save_as">Zapisz jako</string>
     <string name="file_saved">Plik został zapisany</string>
     <string name="invalid_file_format">Nieprawidłowy format pliku</string>
     <string name="out_of_memory_error">Błąd pamięci</string>
@@ -12,6 +11,10 @@
     <string name="set_as">Ustaw jako</string>
     <string name="value_copied_to_clipboard">Wartość została skopiowana do schowka</string>
     <string name="unknown">Nieznane</string>
+
+    <!-- Search -->
+    <string name="search">Szukaj</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">Filtr</string>
