--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Zrušiť</string>
-    <string name="search">Hľadať</string>
     <string name="save_as">Uložiť ako</string>
     <string name="file_saved">Súbor bol úspešne uložený</string>
     <string name="invalid_file_format">Neplatný formát súboru</string>
@@ -12,6 +11,10 @@
     <string name="set_as">Nastaviť ako</string>
     <string name="value_copied_to_clipboard">Hodnota bola vložená do schránky</string>
     <string name="unknown">Neznámy</string>
+
+    <!-- Search -->
+    <string name="search">Hľadať</string>
+    <string name="type_2_characters">Zadajte aspoň 2 znaky pre spustenie hľadania.</string>
 
     <!-- Filters -->
     <string name="filter">Filtrovať</string>
