--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Avbryt</string>
-    <string name="search">Sök</string>
     <string name="save_as">Spara som</string>
     <string name="file_saved">Filen sparad</string>
     <string name="invalid_file_format">Ogiltigt filformat</string>
@@ -12,6 +11,10 @@
     <string name="set_as">Ange som</string>
     <string name="value_copied_to_clipboard">Värdet har kopierats till urklipp</string>
     <string name="unknown">Unknown</string>
+
+    <!-- Search -->
+    <string name="search">Sök</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">Filtrera</string>
