--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="ok">確定</string>
     <string name="cancel">取消</string>
-    <string name="search">搜尋</string>
     <string name="save_as">儲存</string>
     <string name="file_saved">成功儲存檔案</string>
     <string name="invalid_file_format">無效的檔案格式</string>
@@ -12,6 +11,10 @@
     <string name="set_as">設為</string>
     <string name="value_copied_to_clipboard">數值複製到剪貼簿</string>
     <string name="unknown">未知的</string>
+
+    <!-- Search -->
+    <string name="search">搜尋</string>
+    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
 
     <!-- Filters -->
     <string name="filter">篩選</string>
