--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -14,7 +14,7 @@
 
     <!-- Search -->
     <string name="search">搜索</string>
-    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
+    <string name="type_2_characters">请输入至少两个字符来开始搜索</string>
 
     <!-- Filters -->
     <string name="filter">过滤</string>
