--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -14,7 +14,7 @@
 
     <!-- Search -->
     <string name="search">Suchen</string>
-    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
+    <string name="type_2_characters">Du musst mindestens 2 Zeichen eingeben, um die Suche zu starten.</string>
 
     <!-- Filters -->
     <string name="filter">Sortieren</string>
