--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -14,7 +14,7 @@
 
     <!-- Search -->
     <string name="search">Zoeken</string>
-    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
+    <string name="type_2_characters">Vul tenminste 2 tekens in.</string>
 
     <!-- Filters -->
     <string name="filter">Filter</string>
