--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -14,7 +14,7 @@
 
     <!-- Search -->
     <string name="search">搜尋</string>
-    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
+    <string name="type_2_characters">輸入兩個字以上來開始搜尋。</string>
 
     <!-- Filters -->
     <string name="filter">篩選</string>
@@ -122,7 +122,7 @@
     <string name="f_number">光圈</string>
     <string name="camera">相機</string>
     <string name="exif">EXIF</string>
-    <string name="song_title">Song title</string>
+    <string name="song_title">歌名</string>
 
     <!-- Color customization -->
     <string name="background_color">背景顏色</string>
@@ -159,7 +159,7 @@
 
     <!-- Actionbar items -->
     <string name="delete">刪除</string>
-    <string name="remove">Remove</string>
+    <string name="remove">移除</string>
     <string name="rename">重新命名</string>
     <string name="share">分享</string>
     <string name="share_via">分享方式</string>
@@ -240,15 +240,15 @@
     <string name="show_info_bubble">拖曳滾動條時，顯示訊息氣泡</string>
 
     <!-- Import / Export -->
-    <string name="importing">Importing…</string>
-    <string name="exporting">Exporting…</string>
-    <string name="importing_successful">Importing successful</string>
-    <string name="exporting_successful">Exporting successful</string>
-    <string name="importing_failed">Importing failed</string>
-    <string name="exporting_failed">Exporting failed</string>
-    <string name="importing_some_entries_failed">Importing some entries failed</string>
-    <string name="exporting_some_entries_failed">Exporting some entries failed</string>
-    <string name="no_entries_for_exporting">No entries for exporting have been found</string>
+    <string name="importing">正在導入…</string>
+    <string name="exporting">正在導出…</string>
+    <string name="importing_successful">導入成功</string>
+    <string name="exporting_successful">導出成功</string>
+    <string name="importing_failed">導入成功</string>
+    <string name="exporting_failed">導出失敗</string>
+    <string name="importing_some_entries_failed">部分項目導入失敗</string>
+    <string name="exporting_some_entries_failed">部分項目導出失敗</string>
+    <string name="no_entries_for_exporting">未發現供導出的項目</string>
 
     <!-- About -->
     <string name="about">關於</string>
