--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -240,10 +240,10 @@
     <string name="show_info_bubble">拖动滚动条时在滚动项目旁显示一个信息气泡</string>
 
     <!-- Setting sections -->
-    <string name="visibility">Visibility</string>
-    <string name="security">Security</string>
-    <string name="scrolling">Scrolling</string>
-    <string name="file_operations">File operations</string>
+    <string name="visibility">可见度</string>
+    <string name="security">安全</string>
+    <string name="scrolling">滚动</string>
+    <string name="file_operations">文件操作</string>
 
     <!-- Import / Export -->
     <string name="importing">正在导入...</string>
