--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -240,10 +240,10 @@
     <string name="show_info_bubble">Bij slepen van schuifbalk extra informatie tonen</string>
 
     <!-- Setting sections -->
-    <string name="visibility">Visibility</string>
-    <string name="security">Security</string>
-    <string name="scrolling">Scrolling</string>
-    <string name="file_operations">File operations</string>
+    <string name="visibility">Opmaak</string>
+    <string name="security">Beveiliging</string>
+    <string name="scrolling">Scrollen</string>
+    <string name="file_operations">Bestandsoperaties</string>
 
     <!-- Import / Export -->
     <string name="importing">Importeren…</string>
