--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -239,21 +239,21 @@
     <string name="show_info_bubble">Mostra una bombolla d\'informació en elements de desplaçament mitjançant arrossegament de la barra de desplaçament</string>
 
     <!-- Setting sections -->
-    <string name="visibility">Visibility</string>
-    <string name="security">Security</string>
-    <string name="scrolling">Scrolling</string>
-    <string name="file_operations">File operations</string>
+    <string name="visibility">Visibilitat</string>
+    <string name="security">Seguretat</string>
+    <string name="scrolling">Desplaçament</string>
+    <string name="file_operations">Operacions de fitxers</string>
 
     <!-- Import / Export -->
-    <string name="importing">Importing…</string>
-    <string name="exporting">Exporting…</string>
-    <string name="importing_successful">Importing successful</string>
-    <string name="exporting_successful">Exporting successful</string>
-    <string name="importing_failed">Importing failed</string>
-    <string name="exporting_failed">Exporting failed</string>
-    <string name="importing_some_entries_failed">Importing some entries failed</string>
-    <string name="exporting_some_entries_failed">Exporting some entries failed</string>
-    <string name="no_entries_for_exporting">No entries for exporting have been found</string>
+    <string name="importing">Important…</string>
+    <string name="exporting">Exportant…</string>
+    <string name="importing_successful">Importació correcta</string>
+    <string name="exporting_successful">Exportació correcta</string>
+    <string name="importing_failed">Importacó fallida</string>
+    <string name="exporting_failed">Exportació fallida</string>
+    <string name="importing_some_entries_failed">L\'impotació d\'algunes entrades ha fallat</string>
+    <string name="exporting_some_entries_failed">L\'exportació d\'algunes entrades ha fallat</string>
+    <string name="no_entries_for_exporting">No s\'han trobat entrades per exportar</string>
 
     <!-- About -->
     <string name="about">Sobre</string>
