--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -14,7 +14,7 @@
 
     <!-- Search -->
     <string name="search">Buscar</string>
-    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
+    <string name="type_2_characters">Escribe por lo menos dos caracteres para iniciar la búsqueda.</string>
 
     <!-- Filters -->
     <string name="filter">Filtrar</string>
