--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -122,7 +122,7 @@
     <string name="f_number">F-number</string>
     <string name="camera">Càmera</string>
     <string name="exif">EXIF</string>
-    <string name="song_title">Song title</string>
+    <string name="song_title">Títol de la canço</string>
 
     <!-- Color customization -->
     <string name="background_color">Color del fons</string>
