add "const" modified to some values

--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -29,7 +29,7 @@
 
     <!-- Renaming -->
     <string name="rename_file">Yeniden adlandır</string>
-    <string name="rename_file">Dosyayı yeniden adlandır</string>
+    <string name="rename_folder">Dosyayı yeniden adlandır</string>
     <string name="rename_file_error">Dosya yeniden adlandırılamıyor</string>
     <string name="rename_folder_error">Klasör yeniden adlandırılamıyor</string>
     <string name="rename_folder_empty">Klasör adı boş olamaz</string>
