--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Vyskytla se neznámá chyba</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Soubor %1$s již existuje</string>
-    <string name="file_already_exists_overwrite">Soubor %1$s již existuje. Přepsat??</string>
-    <string name="select_an_action">Zvolte akci</string>
+    <string name="file_already_exists">Soubor \"%1$s\" již existuje</string>
+    <string name="folder_already_exists">Složka \"%1$s\" již existuje</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Přepsat</string>
     <string name="skip">Přeskočit</string>
     <string name="append">Ponechat s \'_1\'</string>
