--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Der opstod en ukendt fejl</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Filen %1$s findes allerede</string>
-    <string name="file_already_exists_overwrite">Filen %1$s findes allerede. Overskriv?</string>
-    <string name="select_an_action">Vælg handling</string>
+    <string name="file_already_exists">Filen \"%1$s\" findes allerede</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Overskriv</string>
     <string name="skip">Skip</string>
     <string name="append">Tilføj med \'_1\'</string>
