--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Ocurrió un error desconocido</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">El archivo %1$s ya existe</string>
-    <string name="file_already_exists_overwrite">El archivo %1$s ya existe. Sobreescribir?</string>
-    <string name="select_an_action">Elige una opción</string>
+    <string name="file_already_exists">El archivo \"%1$s\" ya existe</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Sobreescribir</string>
     <string name="skip">Saltar</string>
     <string name="append">Añadir \'_1\'</string>
