--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Une erreur inconnue est survenue.</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Le fichier %1$s existe déjà</string>
-    <string name="file_already_exists_overwrite">Le fichier %1$s existe déjà. Ecraser?</string>
-    <string name="select_an_action">Sélectionner une action</string>
+    <string name="file_already_exists">Le fichier \"%1$s\" existe déjà</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Écraser</string>
     <string name="skip">Passer</string>
     <string name="append">Suffixer avec \'_1\'</string>
