--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Nepoznata greška se dogodila</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Datoteka %1$s već postoji</string>
-    <string name="file_already_exists_overwrite">Datoteka %1$s već postoji. Presnimiti?</string>
-    <string name="select_an_action">Odaberite radnju</string>
+    <string name="file_already_exists">Datoteka \"%1$s\" već postoji</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Presnimi</string>
     <string name="skip">Preskoči</string>
     <string name="append">Dodaj s \'_1\'</string>
