--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Riscontrato un errore sconosciuto</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Il file %1$s esiste già</string>
-    <string name="file_already_exists_overwrite">Il file %1$s esiste già. Sovrascrivi?</string>
-    <string name="select_an_action">Seleziona un\'azione</string>
+    <string name="file_already_exists">Il file \"%1$s\" esiste già</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Sovrascrivi</string>
     <string name="skip">Salta</string>
     <string name="append">Aggiungi \'_1\' alla fine</string>
