--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">不明なエラーが発生しました</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">ファイル %1$s は既に存在しています</string>
-    <string name="file_already_exists_overwrite">ファイル %1$s は既に存在しています。上書きしますか?</string>
-    <string name="select_an_action">処理を選択</string>
+    <string name="file_already_exists">ファイル \"%1$s\" は既に存在しています</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">上書き</string>
     <string name="skip">スキップ</string>
     <string name="append">\'_1\' に追記する</string>
