--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">알 수 없는 에러가 발생함</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">%1$s 파일이 이미 존재합니다.</string>
-    <string name="file_already_exists_overwrite">%1$s 파일이 이미 존재합니다. 덮어쓰시겠습니까?</string>
-    <string name="select_an_action">동작선택</string>
+    <string name="file_already_exists">\"%1$s\" 파일이 이미 존재합니다.</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">덮어쓰기</string>
     <string name="skip">건너뛰기</string>
     <string name="append">\'_1\' 문자열을 추가함</string>
