--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Neþinoma klaida</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Failas %1$s jau egzistuoja</string>
-    <string name="file_already_exists_overwrite">Failas %1$s jau egzistuoja. Pervadinti?</string>
-    <string name="select_an_action">Pasirinkti veiksmà</string>
+    <string name="file_already_exists">Failas \"%1$s\" jau egzistuoja</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Uþraðyti ant virðaus</string>
     <string name="skip">Praleisti</string>
     <string name="append">Papildyti su \'_1\'</string>
