--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">En ukjent feil oppstod</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Filen %1$s finnes allerede</string>
-    <string name="file_already_exists_overwrite">Filen %1$s finnes allerede. Overskrive?</string>
-    <string name="select_an_action">Velg en handling</string>
+    <string name="file_already_exists">Filen \"%1$s\" finnes allerede</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Overskriv</string>
     <string name="skip">Hopp over</string>
     <string name="append">Tilføy \'_1\'</string>
