--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Ocorreu um erro desconhecido</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Já existe um arquivo com o nome %1$s</string>
-    <string name="file_already_exists_overwrite">Já existe um arquivo com o nome %1$s. Substituir?</string>
-    <string name="select_an_action">Selecione uma ação</string>
+    <string name="file_already_exists">Já existe um arquivo com o nome \%1$s\"</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Substituir</string>
     <string name="skip">Ignorar</string>
     <string name="append">Adicionar sufixo \'_1\'</string>
