--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Ett okänt fel har uppstått</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">Filen %1$s finns redan</string>
-    <string name="file_already_exists_overwrite">Filen %1$s finns redan. Skriv över?</string>
-    <string name="select_an_action">Välj en åtgärd</string>
+    <string name="file_already_exists">Filen \"%1$s\" finns redan</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Skriv över</string>
     <string name="skip">Hoppa över</string>
     <string name="append">Bifoga \'_1\'</string>
