--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">Bilinmeyen bir hata oluştu</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">%1$s dosyası zaten var</string>
-    <string name="file_already_exists_overwrite">%1$s dosyası zaten var. Üzerine yazılsın mı?</string>
-    <string name="select_an_action">Bir eylem seçin</string>
+    <string name="file_already_exists">\"%1$s\" dosyası zaten var</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">Üzerine yaz</string>
     <string name="skip">Atla</string>
     <string name="append">\'_1\' ile ekle</string>
