--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -78,9 +78,9 @@
     <string name="unknown_error_occurred">未知错误</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">文件 %1$s 已存在</string>
-    <string name="file_already_exists_overwrite">文件 %1$s 已存在。是否覆盖？</string>
-    <string name="select_an_action">选择操作</string>
+    <string name="file_already_exists">文件 \"%1$s\" 已存在</string>
+    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="merge">Merge</string>
     <string name="overwrite">覆盖</string>
     <string name="skip">跳过</string>
     <string name="append">应用到 \'_1\'</string>
