--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -77,8 +77,9 @@
     <string name="empty_name">Si us plau introdueix un nom</string>
     <string name="unknown_error_occurred">Ha ocorregut un error desconegut</string>
 
-    <!-- Copy conflicts -->
+    <!-- File operation conflicts -->
     <string name="file_already_exists">L’arxiu \"%1$s\" ja existeix</string>
+    <string name="file_already_exists_overwrite">L’arxiu \"%1$s\" ja existeix. El vos sobreescriure?</string>
     <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
     <string name="merge">Merge</string>
     <string name="overwrite">Sobreescriure</string>
