--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -77,8 +77,9 @@
     <string name="empty_name">Skriv et navn</string>
     <string name="unknown_error_occurred">Der opstod en ukendt fejl</string>
 
-    <!-- Copy conflicts -->
+    <!-- File operation conflicts -->
     <string name="file_already_exists">Filen \"%1$s\" findes allerede</string>
+    <string name="file_already_exists_overwrite">Filen \"%1$s\" findes allerede. Overskriv?</string>
     <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
     <string name="merge">Merge</string>
     <string name="overwrite">Overskriv</string>
