--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -77,8 +77,9 @@
     <string name="empty_name">Molimo unesite naziv</string>
     <string name="unknown_error_occurred">Nepoznata greška se dogodila</string>
 
-    <!-- Copy conflicts -->
+    <!-- File operation conflicts -->
     <string name="file_already_exists">Datoteka \"%1$s\" već postoji</string>
+    <string name="file_already_exists_overwrite">Datoteka \"%1$s\" već postoji. Presnimiti?</string>
     <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
     <string name="merge">Merge</string>
     <string name="overwrite">Presnimi</string>
