--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -77,8 +77,9 @@
     <string name="empty_name">Voer een naam in</string>
     <string name="unknown_error_occurred">Onbekende fout opgetreden</string>
 
-    <!-- Copy conflicts -->
+    <!-- File operation conflicts -->
     <string name="file_already_exists">Bestand \"%1$s\" bestaat reeds</string>
+    <string name="file_already_exists_overwrite">Bestand \"%1$s\" bestaat reeds. Overschrijven?</string>
     <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
     <string name="merge">Merge</string>
     <string name="overwrite">Overschrijven</string>
