--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -77,8 +77,9 @@
     <string name="empty_name">Пожалуйста, введите имя</string>
     <string name="unknown_error_occurred">Произошла неизвестная ошибка</string>
 
-    <!-- Copy conflicts -->
+    <!-- File operation conflicts -->
     <string name="file_already_exists">Файл \"%1$s\" уже существует</string>
+    <string name="file_already_exists_overwrite">Файл \"%1$s\" уже существует. Перезаписать?</string>
     <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
     <string name="merge">Merge</string>
     <string name="overwrite">Перезаписать</string>
