--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -77,8 +77,9 @@
     <string name="empty_name">Prosím zadajte názov</string>
     <string name="unknown_error_occurred">Došlo k neznámej chybe</string>
 
-    <!-- Copy conflicts -->
+    <!-- File operation conflicts -->
     <string name="file_already_exists">Súbor \"%1$s\" už existuje</string>
+    <string name="file_already_exists_overwrite">Súbor \"%1$s\" už existuje. Prepísať?</string>
     <string name="folder_already_exists">Priečinok \"%1$s\" už existuje</string>
     <string name="merge">Merge</string>
     <string name="overwrite">Prepísať</string>
