--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -77,8 +77,9 @@
     <string name="empty_name">請輸入一個名字</string>
     <string name="unknown_error_occurred">發生未知的錯誤</string>
 
-    <!-- Copy conflicts -->
+    <!-- File operation conflicts -->
     <string name="file_already_exists">檔案 \"%1$s\" 已經存在</string>
+    <string name="file_already_exists_overwrite">檔案 \"%1$s\" 已經存在。 要覆蓋嗎?</string>
     <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
     <string name="overwrite">覆蓋</string>
     <string name="skip">跳過</string>
